tests/errors/number_parameters.yaka
PROGRAMME param

ENTIER FONCTION max (ENTIER i, ENTIER j)
	VAR BOOLEEN b,c;
	VAR ENTIER k;
	k=i;
	SI k>j ALORS
		RETOURNE k
	SINON
		RETOURNE j
	FSI
FFONCTION

ENTIER FONCTION min (ENTIER i, ENTIER j)
	SI i<j ALORS
		RETOURNE i
	SINON
		RETOURNE j
	FSI
FFONCTION

BOOLEEN FONCTION sup(ENTIER i, ENTIER j)
	RETOURNE i>j
FFONCTION

PRINCIPAL
	VAR ENTIER i,j,k;
	VAR BOOLEEN b;
	i=5;
	LIRE(j);
	ALALIGNE;
	k=max (i,min(j,5))+2;
	b=sup(1+max(i,j-5));
	ALALIGNE;
	ECRIRE(k);
	ALALIGNE;
	ECRIRE(b);
FPRINCIPAL

FPROGRAMME
